# summer-memory-weaver

./: .gitignore  README.md  pyproject.toml
app/: graph.py  graph_definition.py  main.py  ui.py
app/schemas/: llm_schemas.py
app/services/: highlight_generator.py  memory_parser.py  narrative_planner.py  story_generator.py
app/static/: style.css
app/templates/: index.html
tests/services/: test_highlight_generator.py  test_memory_parser.py
